# space-walls

./: README.md  pyproject.toml  setup.cfg
assets/: README.md  query.sql
doc/: README.md  example.jxa  jxa.md  notes.md  spaces-plist.md  strategies.md  system-images.md  wallpapers-database.md
space_walls/: __init__.py  attr.py  cli.py  config.py  file.py  spaces_file.py  wallpapers_file.py
space_walls/files/: db.py  file.py  json_file.py  plist_file.py  spaces_file.py  spaces_json_file.py  wallpaper_plist.py  wallpapers_db.py  wallpapers_file.py
tests/: conftest.py  test_config.py  test_file.py  test_spaces_file.py  test_wallpapers_file.py
tests/files/: test_db.py  test_file.py  test_json_file.py  test_plist_file.py  test_spaces_file.py  test_spaces_json_file.py  test_wallpaper_plist.py  test_wallpapers_db.py  test_wallpapers_file.py
tests/fixture_data/: com.apple.spaces.plist  com.apple.wallpaper.plist  desktoppicture.db  invalid.json  spaces.json  wallpapers.json
