[tool.poetry]
name = "space-walls"
version = "0.1.0"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
more-itertools = "^10.2.0"
typer = "^0.12.2"
rich = "^13.7.1"

[tool.pytest.ini_options]
addopts = "-vvx"

[tool.black]
line-length = "88"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
isort = "^5.13.2"
neovim = "^0.3.1"
pdbpp = "^0.10.3"
pycodestyle = "^2.11.1"
pylama = "^8.4.1"
pylint = "^3.1.0"
pytest = "^8.1.1"
ipython = "^8.23.0"

[tool.poetry.scripts]
walls = "space_walls.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
